--- a/src/App.css
+++ b/src/App.css
@@ -1058,6 +1058,83 @@ a:hover {
             .modal-dialog {
                 width: 100%;
             }
+            .modal-body {
+                max-height: 80vh;
+                overflow-y: scroll;
+                padding: 24px 36px;
+                .section {
+                    /* margin-bottom: 20px; */
+
+                    h4 {
+                        font-size: 1.25rem;
+                        font-weight: 600;
+                        margin-bottom: 4px;
+                    }
+
+                    hr {
+                        color: #cdcdcd;
+                        border-width: 1px;
+                        margin: 0px;
+                    }
+                    hr.header {
+                        color: #b0b0b0;
+                        border-width: 2px;
+                    }
+
+                    .block {
+                        margin: 32px 0px;
+                        display: flex;
+                        min-height: 120px;
+                    }
+                    .block.with-image {
+                        justify-content: flex-start;
+                        height: auto;
+
+                        .image-container.two-image {
+                            display: flex;
+                            flex-direction: column;
+                        }
+
+                        img {
+                            width: 300px;
+                            height: fit-content;
+                            margin: auto 0px;
+                            border: 2px solid #ebebeb;
+                            object-fit: contain;
+                        }
+
+                        .text {
+                            display: flex;
+                            width: 400px;
+                            flex-direction: column;
+                            justify-content: space-evenly;
+                            margin-left: 60px;
+
+                            p {
+                                margin-bottom: 0px;
+
+                                span.text-button-example {
+                                    display: inline-flex;
+                                    justify-content: center;
+                                    background-color: #efefef;
+                                    width: 25px;
+                                    height: 25px;
+                                    border-radius: 10px 0px 0px 10px;
+                                    border: 1px solid lightgray;
+
+                                    b {
+                                        line-height: 20px;
+                                        margin: auto auto 5px;
+                                    }
+                                }
+                                span.text-button-example.right {
+                                    border-radius: 0px 10px 10px 0px;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
         }
     }
 }
